--- a/Secondtask.html
+++ b/Secondtask.html
@@ -1,204 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f4f4f4;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Stylish Calculator</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #f7f7f7;
+      color: #333;
+    }
 
-        .calculator {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 10px;
-            max-width: 260px;
-        }
+    .calculator {
+      background-color: #ffffff;
+      border-radius: 20px;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      width: 300px;
+    }
 
-        .calculator input {
-            grid-column: span 4;
-            padding: 15px;
-            font-size: 2rem;
-            text-align: right;
-        }
+    .screen {
+      width: 100%;
+      height: 50px;
+      text-align: right;
+      font-size: 2rem;
+      padding: 10px;
+      border-radius: 10px;
+      background-color: #f1f1f1;
+      border: none;
+      margin-bottom: 20px;
+    }
 
-        .calculator button {
-            padding: 20px;
-            font-size: 1.5rem;
-            cursor: pointer;
-            background-color: #f1f1f1;
-            border: 1px solid #ccc;
-        }
+    .button {
+      width: 60px;
+      height: 60px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      font-size: 1.5rem;
+      border-radius: 10px;
+      margin: 5px;
+      transition: background-color 0.3s;
+    }
 
-        .calculator button:active {
-            background-color: #ddd;
-        }
+    .button:hover {
+      background-color: #45a049;
+    }
 
-        .calculator button.operator {
-            background-color: #f7a7a7;
-        }
+    .button:active {
+      background-color: #397f39;
+    }
 
-        .calculator button.operator:active {
-            background-color: #e75b5b;
-        }
+    .button.clear {
+      background-color: #FF5733;
+    }
 
-        .calculator button.equal {
-            background-color: #4CAF50;
-            color: white;
-            grid-column: span 2;
-        }
+    .button.clear:hover {
+      background-color: #e64a19;
+    }
 
-        .calculator button.clear {
-            background-color: #f44336;
-            color: white;
-            grid-column: span 2;
-        }
+    .button.equal {
+      background-color: #FFC107;
+    }
 
-        .calculator button.clear:active {
-            background-color: #d32f2f;
-        }
-    </style>
+    .button.equal:hover {
+      background-color: #e69100;
+    }
+
+    .button.dark-theme {
+      background-color: #333;
+      color: white;
+    }
+
+    .button.dark-theme:hover {
+      background-color: #444;
+    }
+
+    .button.theme-toggle {
+      background-color: #03A9F4;
+    }
+
+    .button.theme-toggle:hover {
+      background-color: #0288D1;
+    }
+
+    .buttons-container {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 10px;
+    }
+
+    .theme-switcher {
+      text-align: center;
+      margin-top: 10px;
+    }
+
+    .dark-theme-mode {
+      background-color: #222;
+      color: white;
+    }
+  </style>
 </head>
 <body>
-
-    <div class="calculator">
-        <input type="text" id="display" disabled />
-        <button class="clear">C</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button class="operator">/</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button class="operator">*</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button class="operator">-</button>
-        <button>0</button>
-        <button>.</button>
-        <button class="equal">=</button>
-        <button class="operator">+</button>
+  <div class="calculator">
+    <input type="text" class="screen" id="screen" disabled />
+    <div class="buttons-container">
+      <button class="button clear" onclick="clearScreen()">C</button>
+      <button class="button" onclick="appendToScreen('7')">7</button>
+      <button class="button" onclick="appendToScreen('8')">8</button>
+      <button class="button" onclick="appendToScreen('9')">9</button>
+      <button class="button" onclick="appendToScreen('/')">/</button>
+      <button class="button" onclick="appendToScreen('4')">4</button>
+      <button class="button" onclick="appendToScreen('5')">5</button>
+      <button class="button" onclick="appendToScreen('6')">6</button>
+      <button class="button" onclick="appendToScreen('*')">*</button>
+      <button class="button" onclick="appendToScreen('1')">1</button>
+      <button class="button" onclick="appendToScreen('2')">2</button>
+      <button class="button" onclick="appendToScreen('3')">3</button>
+      <button class="button" onclick="appendToScreen('-')">-</button>
+      <button class="button" onclick="appendToScreen('0')">0</button>
+      <button class="button" onclick="appendToScreen('.')">.</button>
+      <button class="button equal" onclick="calculate()">=</button>
+      <button class="button" onclick="appendToScreen('+')">+</button>
     </div>
+    <div class="theme-switcher">
+      <button class="button theme-toggle" onclick="toggleTheme()">mode</button>
+    </div>
+  </div>
 
-    <script>
-        const display = document.getElementById('display');
-        let currentInput = ''; // Holds the current input in display
-        let operator = null; // Holds the current operator
-        let prevInput = ''; // Holds the previous input for operations
+  <script>
+    let currentInput = "";
+    let isDarkMode = false;
 
-        // Add event listeners for all buttons
-        const buttons = document.querySelectorAll('.calculator button');
-        buttons.forEach(button => {
-            button.addEventListener('click', handleButtonClick);
-        });
+    function clearScreen() {
+      currentInput = "";
+      document.getElementById('screen').value = "";
+    }
 
-        // Handle button clicks
-        function handleButtonClick(event) {
-            const buttonValue = event.target.innerText;
+    function appendToScreen(value) {
+      currentInput += value;
+      document.getElementById('screen').value = currentInput;
+    }
 
-            if (buttonValue === 'C') {
-                clearDisplay();
-            } else if (buttonValue === '=') {
-                calculateResult();
-            } else if (['+', '-', '*', '/'].includes(buttonValue)) {
-                handleOperator(buttonValue);
-            } else {
-                appendToDisplay(buttonValue);
-            }
-        }
+    function calculate() {
+      try {
+        currentInput = eval(currentInput);
+        document.getElementById('screen').value = currentInput;
+      } catch (error) {
+        document.getElementById('screen').value = "Error";
+        setTimeout(clearScreen, 1000); // clear after 1 second
+      }
+    }
 
-        // Handle numeric and decimal input
-        function appendToDisplay(value) {
-            currentInput += value;
-            display.value = currentInput;
-        }
+    function toggleTheme() {
+      const calculator = document.querySelector('.calculator');
+      const body = document.querySelector('body');
 
-        // Handle operator input
-        function handleOperator(value) {
-            if (currentInput === '') return; // Don't allow operator without number input
-            if (prevInput !== '') {
-                calculateResult();
-            }
-            operator = value;
-            prevInput = currentInput;
-            currentInput = '';
-        }
-
-        // Perform the calculation
-        function calculateResult() {
-            if (prevInput === '' || currentInput === '') return;
-
-            let result;
-            const prev = parseFloat(prevInput);
-            const current = parseFloat(currentInput);
-
-            switch (operator) {
-                case '+':
-                    result = prev + current;
-                    break;
-                case '-':
-                    result = prev - current;
-                    break;
-                case '*':
-                    result = prev * current;
-                    break;
-                case '/':
-                    if (current === 0) {
-                        result = 'Error';
-                        break;
-                    }
-                    result = prev / current;
-                    break;
-                default:
-                    return;
-            }
-
-            display.value = result;
-            prevInput = result.toString();
-            currentInput = '';
-            operator = null;
-        }
-
-        // Clear the display
-        function clearDisplay() {
-            currentInput = '';
-            prevInput = '';
-            operator = null;
-            display.value = '';
-        }
-
-        // Error handling for invalid input or operations
-        window.addEventListener('error', (e) => {
-            display.value = 'Error';
-            currentInput = '';
-            prevInput = '';
-            operator = null;
-        });
-
-        // Handle keyboard input
-        window.addEventListener('keydown', (e) => {
-            if ('0123456789'.includes(e.key)) {
-                appendToDisplay(e.key);
-            } else if (['+', '-', '*', '/'].includes(e.key)) {
-                handleOperator(e.key);
-            } else if (e.key === 'Enter') {
-                calculateResult();
-            } else if (e.key === 'Backspace') {
-                currentInput = currentInput.slice(0, -1);
-                display.value = currentInput;
-            } else if (e.key === 'c' || e.key === 'C') {
-                clearDisplay();
-            }
-        });
-    </script>
+      if (isDarkMode) {
+        body.classList.remove('dark-theme-mode');
+        calculator.style.backgroundColor = "#ffffff";
+        isDarkMode = false;
+      } else {
+        body.classList.add('dark-theme-mode');
+        calculator.style.backgroundColor = "#333";
+        isDarkMode = true;
+      }
+    }
+  </script>
 </body>
 </html>
